// file: pkg/auth/proto/responses/delete_role_response.proto
// file: auth/proto/responses/delete_role_response.proto
//
// Response definitions for auth module

//
edition = "2023";

package gcommon.v1.auth;


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/auth/proto";

message DeleteRoleResponse {
  // Deletion success
  bool success = 1;

  // Error message if deletion failed
  string error_message = 2;

  // Number of users/entities that lost this role
  int32 affected_subjects = 3;
}
